--- a/shitty-one/index.html
+++ b/shitty-one/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./javascript/class.js"></script>
-  <title>Multiscroll</title>
+  <title>Multiscroll 1</title>
 </head>
 
 <body>
