idk what the hell what i have changed

--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="./javascript/script.js"></script>
+  <script defer src="./javascript/script_3.js"></script>
   <title>Multiscroll Dekstop</title>
 </head>
 
@@ -25,108 +25,112 @@
 
   <main class="slides-container" id="slides-container">
     <!-- Slide 1 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-1-full">
-        <div class="slide-content">
-          Slide 1 Full
-        </div>
+    <div class="slide">
+      <div class="slide__full">
+        <div class="slide__content slide-1-full">Slide 1 Full</div>
       </div>
     </div>
+    <!-- Slide 1 -->
 
     <!-- Slide 2 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-2-left">
-        <div class="slide-content">Slide 2 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-2-left">Slide 2 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-2-right">
-        <div class="slide-content">Slide 2 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-2-right">Slide 2 Right</div>
       </div>
     </div>
+    <!-- Slide 2 -->
 
     <!-- Slide 3 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-3-full">
-        <div class="slide-content">
-          Slide 3 Full
-        </div>
+    <div class="slide">
+      <div class="slide__full">
+        <div class="slide__content slide-3-full">Slide 3 Full</div>
       </div>
     </div>
+    <!-- Slide 3 -->
 
     <!-- Slide 4 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-4-left">
-        <div class="slide-content">Slide 4 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-4-left">Slide 4 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-4-right">
-        <div class="slide-content">Slide 4 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-4-right">Slide 4 Right</div>
       </div>
     </div>
+    <!-- Slide 4 -->
 
     <!-- Slide 5 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-5-left">
-        <div class="slide-content">Slide 5 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-5-left">Slide 5 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-5-right">
-        <div class="slide-content">Slide 5 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-5-right">Slide 5 Right</div>
       </div>
     </div>
+    <!-- Slide 5 -->
 
     <!-- Slide 6 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-6-left">
-        <div class="slide-content">Slide 6 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-6-left">Slide 6 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-6-right">
-        <div class="slide-content">Slide 6 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-6-right">Slide 6 Right</div>
       </div>
     </div>
+    <!-- Slide 6 -->
 
     <!-- Slide 7 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-7-left">
-        <div class="slide-content">Slide 7 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-7-left">Slide 7 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-7-right">
-        <div class="slide-content">Slide 7 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-7-right">Slide 7 Right</div>
       </div>
     </div>
+    <!-- Slide 7 -->
 
     <!-- Slide 8 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-8-full">
-        <div class="slide-content">
-          Slide 8 Full
-        </div>
+    <div class="slide">
+      <div class="slide__full">
+        <div class="slide__content slide-8-full">Slide 8 Full</div>
       </div>
     </div>
+    <!-- Slide 8 -->
 
     <!-- Slide 9 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-9-left">
-        <div class="slide-content">Slide 9 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-9-left">Slide 9 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-9-right">
-        <div class="slide-content">Slide 9 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-9-right">Slide 9 Right</div>
       </div>
     </div>
+    <!-- Slide 9 -->
 
     <!-- Slide 10 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-10-left">
-        <div class="slide-content">Slide 10 Left</div>
+    <div class="slide">
+      <div class="slide__multi">
+        <div class="slide__content slide-10-left">Slide 10 Left</div>
       </div>
 
-      <div class="slide-wrapper-wrap slide-right slide-10-right">
-        <div class="slide-content">Slide 10 Right</div>
+      <div class="slide__multi">
+        <div class="slide__content slide-10-right">Slide 10 Right</div>
       </div>
     </div>
+    <!-- Slide 10 -->
   </main>
 </body>
 
