--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -1,177 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/index.css" />
+		<script defer src="./javascript/index.js"></script>
+		<title>Multiscroll Dekstop</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.css">
-  <script defer src="./javascript/index.js"></script>
-  <title>Multiscroll Dekstop - New</title>
-</head>
+	<body>
+		<div class="mys-multiscroll-nav">
+			<button
+				type="button"
+				aria-label="to slide 0"
+				data-mys-multiscroll-nav="0"
+				class="mys-multiscroll-nav__btn mys-multiscroll-nav__btn--active"
+			></button>
 
-<body>
-  <div class="mys-multiscroll-nav">
-    <button
-      type="button"
-      aria-label="to slide 0"
-      data-mys-multiscroll-nav="0"
-      class="mys-multiscroll-nav__btn mys-multiscroll-nav__btn--active">
-    </button>
+			<button
+				type="button"
+				aria-label="to slide 1"
+				data-mys-multiscroll-nav="1"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-    <button type="button" aria-label="to slide 1" data-mys-multiscroll-nav="1" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 2" data-mys-multiscroll-nav="2" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 3" data-mys-multiscroll-nav="3" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 4" data-mys-multiscroll-nav="4" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 5" data-mys-multiscroll-nav="5" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 6" data-mys-multiscroll-nav="6" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 7" data-mys-multiscroll-nav="7" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 8" data-mys-multiscroll-nav="8" class="mys-multiscroll-nav__btn"></button>
-    <button type="button" aria-label="to slide 9" data-mys-multiscroll-nav="9" class="mys-multiscroll-nav__btn"></button>
-  </div>
+			<button
+				type="button"
+				aria-label="to slide 2"
+				data-mys-multiscroll-nav="2"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-  <main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
-    <!-- Slide 0 -->
-    <div aria-hidden="false" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide" style="z-index: 1;">
-      <div class="mys-multiscroll-slide__full" style="transform: translateY(0%);">
-        <div class="mys-multiscroll-slide__content slide-0-full">
-          Slide 0 Full
-        </div>
-      </div>
-    </div>
-    <!-- Slide 0 -->
+			<button
+				type="button"
+				aria-label="to slide 3"
+				data-mys-multiscroll-nav="3"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-    <!-- Slide 1 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(100%);">
-        <div class="mys-multiscroll-slide__content slide-1-left">
-          Slide 1 Left
-        </div>
-      </div>
+			<button
+				type="button"
+				aria-label="to slide 4"
+				data-mys-multiscroll-nav="4"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-100%);">
-        <div class="mys-multiscroll-slide__content slide-1-right">
-          Slide 1 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 1 -->
+			<button
+				type="button"
+				aria-label="to slide 5"
+				data-mys-multiscroll-nav="5"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-    <!-- Slide 2 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__full" style="transform: translateY(200%);">
-        <div class="mys-multiscroll-slide__content slide-2-full">
-          Slide 2 Full
-        </div>
-      </div>
-    </div>
-    <!-- Slide 2 -->
+			<button
+				type="button"
+				aria-label="to slide 6"
+				data-mys-multiscroll-nav="6"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-    <!-- Slide 3 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(300%);">
-        <div class="mys-multiscroll-slide__content slide-3-left">
-          Slide 3 Left
-        </div>
-      </div>
+			<button
+				type="button"
+				aria-label="to slide 7"
+				data-mys-multiscroll-nav="7"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-300%);">
-        <div class="mys-multiscroll-slide__content slide-3-right">
-          Slide 3 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 3 -->
+			<button
+				type="button"
+				aria-label="to slide 8"
+				data-mys-multiscroll-nav="8"
+				class="mys-multiscroll-nav__btn"
+			></button>
 
-    <!-- Slide 4 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(400%);">
-        <div class="mys-multiscroll-slide__content slide-4-left">
-          Slide 4 Left
-        </div>
-      </div>
+			<button
+				type="button"
+				aria-label="to slide 9"
+				data-mys-multiscroll-nav="9"
+				class="mys-multiscroll-nav__btn"
+			></button>
+		</div>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-400%);">
-        <div class="mys-multiscroll-slide__content slide-4-right">
-          Slide 4 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 4 -->
+		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
+			<!-- Slide 0 -->
+			<div
+				aria-hidden="false"
+				data-mys-multiscroll-slide-type="full"
+				class="mys-multiscroll-slide"
+				style="z-index: 1"
+			>
+				<div class="mys-multiscroll-slide__full" style="transform: translateY(0%)">
+					<div class="mys-multiscroll-slide__content slide-0-full">Slide 0 Full</div>
+				</div>
+			</div>
+			<!-- Slide 0 -->
 
-    <!-- Slide 5 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(500%);">
-        <div class="mys-multiscroll-slide__content slide-5-left">
-          Slide 5 Left
-        </div>
-      </div>
+			<!-- Slide 1 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(100%)">
+					<div class="mys-multiscroll-slide__content slide-1-left">Slide 1 Left</div>
+				</div>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-500%);">
-        <div class="mys-multiscroll-slide__content slide-5-right">
-          Slide 5 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 5 -->
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-100%)">
+					<div class="mys-multiscroll-slide__content slide-1-right">Slide 1 Right</div>
+				</div>
+			</div>
+			<!-- Slide 1 -->
 
-    <!-- Slide 6 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(600%);">
-        <div class="mys-multiscroll-slide__content slide-6-left">
-          Slide 6 Left
-        </div>
-      </div>
+			<!-- Slide 2 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__full" style="transform: translateY(200%)">
+					<div class="mys-multiscroll-slide__content slide-2-full">Slide 2 Full</div>
+				</div>
+			</div>
+			<!-- Slide 2 -->
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-600%);">
-        <div class="mys-multiscroll-slide__content slide-6-right">
-          Slide 6 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 6 -->
+			<!-- Slide 3 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(300%)">
+					<div class="mys-multiscroll-slide__content slide-3-left">Slide 3 Left</div>
+				</div>
 
-    <!-- Slide 7 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__full" style="transform: translateY(700%);">
-        <div class="mys-multiscroll-slide__content slide-7-full">
-          Slide 7 Full
-        </div>
-      </div>
-    </div>
-    <!-- Slide 7 -->
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-300%)">
+					<div class="mys-multiscroll-slide__content slide-3-right">Slide 3 Right</div>
+				</div>
+			</div>
+			<!-- Slide 3 -->
 
-    <!-- Slide 8 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(800%);">
-        <div class="mys-multiscroll-slide__content slide-8-left">
-          Slide 8 Left
-        </div>
-      </div>
+			<!-- Slide 4 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(400%)">
+					<div class="mys-multiscroll-slide__content slide-4-left">Slide 4 Left</div>
+				</div>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-800%);">
-        <div class="mys-multiscroll-slide__content slide-8-right">
-          Slide 8 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 8 -->
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-400%)">
+					<div class="mys-multiscroll-slide__content slide-4-right">Slide 4 Right</div>
+				</div>
+			</div>
+			<!-- Slide 4 -->
 
-    <!-- Slide 9 -->
-    <div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(900%);">
-        <div class="mys-multiscroll-slide__content slide-9-left">
-          Slide 9 Left
-        </div>
-      </div>
+			<!-- Slide 5 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(500%)">
+					<div class="mys-multiscroll-slide__content slide-5-left">Slide 5 Left</div>
+				</div>
 
-      <div class="mys-multiscroll-slide__multi" style="transform: translateY(-900%);">
-        <div class="mys-multiscroll-slide__content slide-9-right">
-          Slide 9 Right
-        </div>
-      </div>
-    </div>
-    <!-- Slide 9 -->
-  </main>
-</body>
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-500%)">
+					<div class="mys-multiscroll-slide__content slide-5-right">Slide 5 Right</div>
+				</div>
+			</div>
+			<!-- Slide 5 -->
 
+			<!-- Slide 6 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(600%)">
+					<div class="mys-multiscroll-slide__content slide-6-left">Slide 6 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-600%)">
+					<div class="mys-multiscroll-slide__content slide-6-right">Slide 6 Right</div>
+				</div>
+			</div>
+			<!-- Slide 6 -->
+
+			<!-- Slide 7 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__full" style="transform: translateY(700%)">
+					<div class="mys-multiscroll-slide__content slide-7-full">Slide 7 Full</div>
+				</div>
+			</div>
+			<!-- Slide 7 -->
+
+			<!-- Slide 8 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(800%)">
+					<div class="mys-multiscroll-slide__content slide-8-left">Slide 8 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-800%)">
+					<div class="mys-multiscroll-slide__content slide-8-right">Slide 8 Right</div>
+				</div>
+			</div>
+			<!-- Slide 8 -->
+
+			<!-- Slide 9 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(900%)">
+					<div class="mys-multiscroll-slide__content slide-9-left">Slide 9 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-900%)">
+					<div class="mys-multiscroll-slide__content slide-9-right">Slide 9 Right</div>
+				</div>
+			</div>
+			<!-- Slide 9 -->
+		</main>
+	</body>
 </html>
