--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -10,85 +10,21 @@
 
 	<body>
 		<div class="mys-multiscroll-nav">
-			<button
-				type="button"
-				aria-label="to slide 0"
-				data-mys-multiscroll-nav="0"
-				class="mys-multiscroll-nav__btn mys-multiscroll-nav__btn--active"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 1"
-				data-mys-multiscroll-nav="1"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 2"
-				data-mys-multiscroll-nav="2"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 3"
-				data-mys-multiscroll-nav="3"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 4"
-				data-mys-multiscroll-nav="4"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 5"
-				data-mys-multiscroll-nav="5"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 6"
-				data-mys-multiscroll-nav="6"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 7"
-				data-mys-multiscroll-nav="7"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 8"
-				data-mys-multiscroll-nav="8"
-				class="mys-multiscroll-nav__btn"
-			></button>
-
-			<button
-				type="button"
-				aria-label="to slide 9"
-				data-mys-multiscroll-nav="9"
-				class="mys-multiscroll-nav__btn"
-			></button>
+			<button type="button" aria-label="to slide 0" data-mys-multiscroll-nav="0" class="mys-multiscroll-nav__btn mys-multiscroll-nav__btn--active"></button>
+			<button type="button" aria-label="to slide 1" data-mys-multiscroll-nav="1" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 2" data-mys-multiscroll-nav="2" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 3" data-mys-multiscroll-nav="3" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 4" data-mys-multiscroll-nav="4" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 5" data-mys-multiscroll-nav="5" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 6" data-mys-multiscroll-nav="6" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 7" data-mys-multiscroll-nav="7" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 8" data-mys-multiscroll-nav="8" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 9" data-mys-multiscroll-nav="9" class="mys-multiscroll-nav__btn"></button>
 		</div>
 
 		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
 			<!-- Slide 0 -->
-			<div
-				aria-hidden="false"
-				data-mys-multiscroll-slide-type="full"
-				class="mys-multiscroll-slide"
-				style="z-index: 1"
-			>
+			<div aria-hidden="false" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide" style="z-index: 1">
 				<div class="mys-multiscroll-slide__full" style="transform: translateY(0%)">
 					<div class="mys-multiscroll-slide__content slide-0-full">Slide 0 Full</div>
 				</div>
