--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -20,6 +20,8 @@
 			<button type="button" aria-label="to slide 7" data-mys-multiscroll-nav="7" class="mys-multiscroll-nav__btn"></button>
 			<button type="button" aria-label="to slide 8" data-mys-multiscroll-nav="8" class="mys-multiscroll-nav__btn"></button>
 			<button type="button" aria-label="to slide 9" data-mys-multiscroll-nav="9" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 10" data-mys-multiscroll-nav="10" class="mys-multiscroll-nav__btn"></button>
+			<button type="button" aria-label="to slide 11" data-mys-multiscroll-nav="11" class="mys-multiscroll-nav__btn"></button>
 		</div>
 
 		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
@@ -130,6 +132,30 @@
 				</div>
 			</div>
 			<!-- Slide 9 -->
+
+			<!-- Slide 10 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(1000%)">
+					<div class="mys-multiscroll-slide__content slide-10-left">Slide 10 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-1000%)">
+					<div class="mys-multiscroll-slide__content slide-10-right">Slide 10 Right</div>
+				</div>
+			</div>
+			<!-- Slide 10 -->
+
+			<!-- Slide 10 -->
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(1100%)">
+					<div class="mys-multiscroll-slide__content slide-11-left">Slide 11 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-1100%)">
+					<div class="mys-multiscroll-slide__content slide-11-right">Slide 11 Right</div>
+				</div>
+			</div>
+			<!-- Slide 10 -->
 		</main>
 	</body>
 </html>
