create base functionalities

--- a/mobile/swipe/page-swipe-3/index.html
+++ b/mobile/swipe/page-swipe-3/index.html
@@ -1,86 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/index.css" />
+		<script defer src="./javascript/index.js"></script>
+		<title>Swipe Mobile 3</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <script defer src="./javascript/script.js"></script>
-  <title>Multiscroll Mobile 2</title>
-</head>
+	<body>
+		<main class="mys-slides-container" id="mys-slides-container">
+			<!-- Slide 1 -->
+			<div class="mys-slide slide-1" style="transform: translateY(0%)">
+				<div class="mys-slide__content">1</div>
+			</div>
 
-<body>
-  <main class="slides-container" id="slides-container">
-    <!-- Slide 1 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-1-full">
-        <div class="slide-content">1</div>
-      </div>
-    </div>
+			<!-- Slide 2 -->
+			<div class="mys-slide slide-2" style="transform: translateY(100%)">
+				<div class="mys-slide__content">2</div>
+			</div>
 
-    <!-- Slide 2 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-2-left">
-        <div class="slide-content">2</div>
-      </div>
-    </div>
+			<!-- Slide 3 -->
+			<div class="mys-slide slide-3" style="transform: translateY(200%)">
+				<div class="mys-slide__content">3</div>
+			</div>
 
-    <!-- Slide 3 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-3-full">
-        <div class="slide-content">3</div>
-      </div>
-    </div>
+			<!-- Slide 4 -->
+			<div class="mys-slide slide-4" style="transform: translateY(300%)">
+				<div class="mys-slide__content">4</div>
+			</div>
 
-    <!-- Slide 4 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-4-left">
-        <div class="slide-content">4</div>
-      </div>
-    </div>
-
-    <!-- Slide 5 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-5-left">
-        <div class="slide-content">5</div>
-      </div>
-    </div>
-
-    <!-- Slide 6 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-6-left">
-        <div class="slide-content">6</div>
-      </div>
-    </div>
-
-    <!-- Slide 7 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-7-left">
-        <div class="slide-content">7</div>
-      </div>
-    </div>
-
-    <!-- Slide 8 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-full slide-8-full">
-        <div class="slide-content">8</div>
-      </div>
-    </div>
-
-    <!-- Slide 9 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-9-left">
-        <div class="slide-content">9</div>
-      </div>
-    </div>
-
-    <!-- Slide 10 -->
-    <div class="slide-wrapper">
-      <div class="slide-wrapper-wrap slide-left slide-10-left">
-        <div class="slide-content">10</div>
-      </div>
-    </div>
-  </main>
-</body>
-
+			<!-- Slide 5 -->
+			<div class="mys-slide slide-5" style="transform: translateY(400%)">
+				<div class="mys-slide__content">5</div>
+			</div>
+		</main>
+	</body>
 </html>
