--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<script defer src="./javascript/index.js"></script>
+		<script type="module" src="./javascript/multiscroll/Multiscroll.js"></script>
 		<title>Multiscroll Dekstop</title>
 	</head>
 
