change path of JS code

--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<script type="module" src="./javascript/Multiscroll.js"></script>
 		<title>Multiscroll Dekstop</title>
 	</head>
 
@@ -157,5 +156,11 @@
 			</div>
 			<!-- Slide 10 -->
 		</main>
+
+		<script type="module">
+			import Mulstiscroll from "./javascript/Multiscroll.js";
+
+			new Mulstiscroll();
+		</script>
 	</body>
 </html>
