fix some issue style

--- a/dekstop/multiscroll/index.html
+++ b/dekstop/multiscroll/index.html
@@ -25,9 +25,13 @@
 
 		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
 			<!-- Slide 0 -->
-			<div aria-hidden="false" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide" style="z-index: 1">
-				<div class="mys-multiscroll-slide__full" style="transform: translateY(0%)">
-					<div class="mys-multiscroll-slide__content slide-0-full">Slide 0 Full</div>
+			<div aria-hidden="false" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide" style="z-index: 1">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(0%)">
+					<div class="mys-multiscroll-slide__content slide-0-left">Slide 0 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(0%)">
+					<div class="mys-multiscroll-slide__content slide-0-right">Slide 0 Right</div>
 				</div>
 			</div>
 			<!-- Slide 0 -->
@@ -45,9 +49,13 @@
 			<!-- Slide 1 -->
 
 			<!-- Slide 2 -->
-			<div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__full" style="transform: translateY(200%)">
-					<div class="mys-multiscroll-slide__content slide-2-full">Slide 2 Full</div>
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(200%)">
+					<div class="mys-multiscroll-slide__content slide-0-left">Slide 2 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-200%)">
+					<div class="mys-multiscroll-slide__content slide-0-right">Slide 2 Right</div>
 				</div>
 			</div>
 			<!-- Slide 2 -->
@@ -101,9 +109,13 @@
 			<!-- Slide 6 -->
 
 			<!-- Slide 7 -->
-			<div aria-hidden="true" data-mys-multiscroll-slide-type="full" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__full" style="transform: translateY(700%)">
-					<div class="mys-multiscroll-slide__content slide-7-full">Slide 7 Full</div>
+			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(700%)">
+					<div class="mys-multiscroll-slide__content slide-3-left">Slide 7 Left</div>
+				</div>
+
+				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-700%)">
+					<div class="mys-multiscroll-slide__content slide-3-right">Slide 7 Right</div>
 				</div>
 			</div>
 			<!-- Slide 7 -->
