improve the transform

--- a/dekstop/multiscroll/packages/index.html
+++ b/dekstop/multiscroll/packages/index.html
@@ -26,11 +26,11 @@
 		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
 			<!-- Slide 0 -->
 			<div aria-hidden="false" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide" style="z-index: 1">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(0%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 0%, 0)">
 					<div class="mys-multiscroll-slide__content slide-0-left">Slide 0 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(0%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 0%, 0)">
 					<div class="mys-multiscroll-slide__content slide-0-right">Slide 0 Right</div>
 				</div>
 			</div>
@@ -38,11 +38,11 @@
 
 			<!-- Slide 1 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(100%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 100%, 0)">
 					<div class="mys-multiscroll-slide__content slide-1-left">Slide 1 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-100%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -100%, 0)">
 					<div class="mys-multiscroll-slide__content slide-1-right">Slide 1 Right</div>
 				</div>
 			</div>
@@ -50,11 +50,11 @@
 
 			<!-- Slide 2 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(200%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 200%, 0)">
 					<div class="mys-multiscroll-slide__content slide-0-left">Slide 2 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-200%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -200%, 0)">
 					<div class="mys-multiscroll-slide__content slide-0-right">Slide 2 Right</div>
 				</div>
 			</div>
@@ -62,11 +62,11 @@
 
 			<!-- Slide 3 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(300%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 300%, 0)">
 					<div class="mys-multiscroll-slide__content slide-3-left">Slide 3 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-300%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -300%, 0)">
 					<div class="mys-multiscroll-slide__content slide-3-right">Slide 3 Right</div>
 				</div>
 			</div>
@@ -74,11 +74,11 @@
 
 			<!-- Slide 4 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(400%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 400%, 0)">
 					<div class="mys-multiscroll-slide__content slide-4-left">Slide 4 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-400%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -400%, 0)">
 					<div class="mys-multiscroll-slide__content slide-4-right">Slide 4 Right</div>
 				</div>
 			</div>
@@ -86,11 +86,11 @@
 
 			<!-- Slide 5 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(500%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 500%, 0)">
 					<div class="mys-multiscroll-slide__content slide-5-left">Slide 5 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-500%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -500%, 0)">
 					<div class="mys-multiscroll-slide__content slide-5-right">Slide 5 Right</div>
 				</div>
 			</div>
@@ -98,11 +98,11 @@
 
 			<!-- Slide 6 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(600%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 600%, 0)">
 					<div class="mys-multiscroll-slide__content slide-6-left">Slide 6 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-600%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -600%, 0)">
 					<div class="mys-multiscroll-slide__content slide-6-right">Slide 6 Right</div>
 				</div>
 			</div>
@@ -110,11 +110,11 @@
 
 			<!-- Slide 7 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(700%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 700%, 0)">
 					<div class="mys-multiscroll-slide__content slide-3-left">Slide 7 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-700%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -700%, 0)">
 					<div class="mys-multiscroll-slide__content slide-3-right">Slide 7 Right</div>
 				</div>
 			</div>
@@ -122,11 +122,11 @@
 
 			<!-- Slide 8 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(800%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 800%, 0)">
 					<div class="mys-multiscroll-slide__content slide-8-left">Slide 8 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-800%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -800%, 0)">
 					<div class="mys-multiscroll-slide__content slide-8-right">Slide 8 Right</div>
 				</div>
 			</div>
@@ -134,11 +134,11 @@
 
 			<!-- Slide 9 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(900%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 900%, 0)">
 					<div class="mys-multiscroll-slide__content slide-9-left">Slide 9 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-900%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -900%, 0)">
 					<div class="mys-multiscroll-slide__content slide-9-right">Slide 9 Right</div>
 				</div>
 			</div>
@@ -146,11 +146,11 @@
 
 			<!-- Slide 10 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(1000%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 1000%, 0)">
 					<div class="mys-multiscroll-slide__content slide-10-left">Slide 10 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-1000%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -1000%, 0)">
 					<div class="mys-multiscroll-slide__content slide-10-right">Slide 10 Right</div>
 				</div>
 			</div>
@@ -158,11 +158,11 @@
 
 			<!-- Slide 11 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(1100%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, 1100%, 0)">
 					<div class="mys-multiscroll-slide__content slide-11-left">Slide 11 Left</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi" style="transform: translateY(-1100%)">
+				<div class="mys-multiscroll-slide__multi" style="transform: translate3d(0, -1100%, 0)">
 					<div class="mys-multiscroll-slide__content slide-11-right">Slide 11 Right</div>
 				</div>
 			</div>
