change folders tructure

--- a/examples/landing-page/index.html
+++ b/examples/landing-page/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
-		<script defer src="./js/index.js"></script>
-		<title>Multiscroll Dekstop</title>
+		<script type="module" src="./script.js"></script>
+		<title>Multiscroll Landing Page Demo</title>
 	</head>
 
 	<body>
@@ -20,7 +20,7 @@
 		<main class="mys-multiscroll-slide-container" id="mys-multiscroll-slide-container">
 			<!-- Slide 0 -->
 			<div aria-hidden="false" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide" style="z-index: 1">
-				<div class="mys-multiscroll-slide__multi slide-0-left" style="transform: translateY(0%)">
+				<div class="mys-multiscroll-slide__multi slide-0-left" style="transform: translate3d(0, 0%, 0)">
 					<div class="mys-multiscroll-slide__content slide-desc">
 						<div class="gin-bottle">
 							<img src="./img/bottle-slide-one.png" alt="Gin bottle" />
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi slide-0-right" style="transform: translateY(0%)">
+				<div class="mys-multiscroll-slide__multi slide-0-right" style="transform: translate3d(0, 0%, 0)">
 					<div class="mys-multiscroll-slide__content slide-desc">
 						<img src="./img/grapes-slide-one.png" alt="Grapes" />
 
@@ -47,13 +47,13 @@
 
 			<!-- Slide 1 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi slide-1-left" style="transform: translateY(100%)">
+				<div class="mys-multiscroll-slide__multi slide-1-left" style="transform: translate3d(0, 100%, 0%)">
 					<div class="mys-multiscroll-slide__content">
 						<div class="slide-1-bg-img"></div>
 					</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi slide-1-right" style="transform: translateY(-100%)">
+				<div class="mys-multiscroll-slide__multi slide-1-right" style="transform: translate3d(0, -100%, 0)">
 					<div class="mys-multiscroll-slide__content slide-desc">
 						<img src="./img/botanical-juniper.png" alt="Grapes" />
 
@@ -70,7 +70,7 @@
 
 			<!-- Slide 2 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi slide-2-left" style="transform: translateY(200%)">
+				<div class="mys-multiscroll-slide__multi slide-2-left" style="transform: translate3d(0, 200%, 0)">
 					<div class="mys-multiscroll-slide__content">
 						<video class="bg-video-slide" autoplay muted loop>
 							<source src="./video/wave.mp4" type="video/mp4" />
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi slide-2-right" style="transform: translateY(-200%)">
+				<div class="mys-multiscroll-slide__multi slide-2-right" style="transform: translate3d(0, -200%, 0)">
 					<div class="mys-multiscroll-slide__content slide-desc">
 						<img src="./img/botanical-wheat.png" alt="Grapes" />
 
@@ -95,7 +95,7 @@
 
 			<!-- Slide 3 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi slide-3-left" style="transform: translateY(300%)">
+				<div class="mys-multiscroll-slide__multi slide-3-left" style="transform: translate3d(0, 300%, 0)">
 					<div class="mys-multiscroll-slide__content">
 						<h1 class="full-title-slide-3">meet the family</h1>
 						<h1 aria-label="meet the family" class="title-slide-3 title-slide-3--left">Meet Th</h1>
@@ -111,7 +111,7 @@
 					<a href="https://github.com/apriliandi246/" class="slide-3-link-multi slide-3-link-multi--left">shop all</a>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi slide-3-right" style="transform: translateY(-300%)">
+				<div class="mys-multiscroll-slide__multi slide-3-right" style="transform: translate3d(0, -300%, 0)">
 					<div class="mys-multiscroll-slide__content">
 						<h1 aria-label="meet the family" class="title-slide-3 title-slide-3--right">e Family</h1>
 
@@ -130,13 +130,13 @@
 
 			<!-- Slide 4 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi slide-4-left" style="transform: translateY(400%)">
+				<div class="mys-multiscroll-slide__multi slide-4-left" style="transform: translate3d(0, 400%, 0)">
 					<div class="mys-multiscroll-slide__content">
 						<div class="slide-4-bg-img"></div>
 					</div>
 				</div>
 
-				<div class="mys-multiscroll-slide__multi slide-4-right" style="transform: translateY(-400%)">
+				<div class="mys-multiscroll-slide__multi slide-4-right" style="transform: translate3d(0, -400%, 0)">
 					<div class="mys-multiscroll-slide__content slide-desc">
 						<img src="./img/botanical-juniper.png" alt="Grapes" />
 
