--- a/examples/simple-demo/index.html
+++ b/examples/simple-demo/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/index.css" />
-		<title>Multiscroll Dekstop</title>
+		<link rel="stylesheet" href="../../packages/css/index.css" />
+		<script type="module" src="./script.js"></script>
+		<title>Multiscroll Simple Demo</title>
 	</head>
-
 	<body>
 		<div class="mys-multiscroll-nav">
 			<button type="button" aria-label="to slide 0" data-mys-multiscroll-nav="0" class="mys-multiscroll-nav__btn mys-multiscroll-nav__btn--active"></button>
@@ -168,11 +168,5 @@
 			</div>
 			<!-- Slide 11 -->
 		</main>
-
-		<script type="module">
-			import Mulstiscroll from "./javascript/Multiscroll.js";
-
-			new Mulstiscroll();
-		</script>
 	</body>
 </html>
