--- a/examples/landing-page/index.html
+++ b/examples/landing-page/index.html
@@ -47,7 +47,7 @@
 
 			<!-- Slide 1 -->
 			<div aria-hidden="true" data-mys-multiscroll-slide-type="multi" class="mys-multiscroll-slide">
-				<div class="mys-multiscroll-slide__multi slide-1-left" style="transform: translate3d(0, 100%, 0%)">
+				<div class="mys-multiscroll-slide__multi slide-1-left" style="transform: translate3d(0, 100%, 0)">
 					<div class="mys-multiscroll-slide__content">
 						<div class="slide-1-bg-img"></div>
 					</div>
